--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="product-slider">
         <h2>Best Seller in Sports & Outdoors</h2>
         <div class="products">
-            <a href="/peoduct.html"> <img src="/assets/product_img.jpg" alt=""></a>
+            <a href="product/product.html"> <img src="/assets/product_img.jpg" alt=""></a>
             <img src="/assets/product1-1.jpg" alt="">
             <img src="/assets/product1-2.jpg" alt="">
             <img src="/assets/product1-3.jpg" alt="">
@@ -326,7 +326,7 @@
         </footer>
 
 
-        <script src="script.js"></script>
+        <script src="product/script.js"></script>
 </body>
 
 </html>
