--- a/product/product.html
+++ b/product/product.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Page</title>
-    <link rel="stylesheet " href="style.css">
+    <link rel="stylesheet " href="/style.css">
     <link rel="stylesheet " href="product.css">
 </head>
 <body>
         <nav>
         <a href="/">
-            <img src="./assets/amazon_logo.png" alt="Amazone logo" width="100">
+            <img src="/assets/amazon_logo.png" alt="Amazone logo" width="100">
         </a>
         <div class="nav-country">
-            <img src="./assets/location_icon.png" height="20" alt="location image">
+            <img src="/assets/location_icon.png" height="20" alt="location image">
             <div>
                 <p>Deliver To</p>
                 <h1>United Kingdom</h1>
@@ -26,7 +26,7 @@
 
             </div>
             <input type="text" class="nav-search-input" placeholder="Search Amazon.in">
-            <img src="assets/search_icon.png" alt="seach-icon" class="nav-search-icon">
+            <img src="/assets/search_icon.png" alt="seach-icon" class="nav-search-icon">
         </div>
         <div class="nav-language">
             <img src="/assets/us_flag.png" alt="" width="25px">
